# cargo-crusader

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONSOLE-FORMAT.md  Cargo.toml  Dockerfile  EXAMPLES.md  FALSE_POSITIVE_BUG.md  HANDOFF.md  PLAN.md  README.md  REMOVE_LEGACY_PATH.md  SPEC.md  TESTING_SUMMARY.md  crusader-docker.sh
.github/workflows/: ci.yml  crusader-docker.yml  crusader-example.yml  crusader-security-test.yml
docs/: docker.md
src/: api.rs  cli.rs  compile.rs  console_tables.rs  error_extract.rs  main.rs  report.rs  report_test.rs
test-crates/crusadertest1/: Cargo.toml
test-crates/crusadertest1/src/: lib.rs
test-crates/crusadertest2/: Cargo.toml
test-crates/crusadertest2/src/: lib.rs
test-crates/fixtures/: README.md
test-crates/fixtures/rust-rgb-breaking/: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
test-crates/fixtures/rust-rgb-breaking/examples/: example.rs  serde.rs
test-crates/integration-fixtures/: README.md
test-crates/integration-fixtures/base-crate-v1/: Cargo.toml
test-crates/integration-fixtures/base-crate-v2/: Cargo.toml
test-crates/integration-fixtures/dependent-broken/: Cargo.toml
test-crates/integration-fixtures/dependent-passing/: Cargo.toml
test-crates/integration-fixtures/dependent-regressed/: Cargo.toml
test-crates/integration-fixtures/dependent-test-failing/: Cargo.toml
test-crates/integration-fixtures/dependent-test-passing/: Cargo.toml
tests/: api_integration_test.rs  cli_parsing_test.rs  default_baseline_wip_test.rs  offline_integration.rs  table_alignment_test.rs  wip_breaking_change_test.rs
(+39 files in other folders)
