[package]
name = "cargo-crusader"
version = "0.1.1"
authors = ["Brian Anderson <banderson@mozilla.com>"]
description = "Test the downstream impact of crate changes before publishing"
license = "MIT/Apache-2.0"
repository = "https://github.com/brson/cargo-crusader"
edition = "2021"

[dependencies]
semver = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
ureq = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8"
num_cpus = "1.16"
tempfile = "3.8"
lazy_static = "1.4"
term = "0.7"
crates_io_api = "0.12"
